--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/stack": "^6.4.1",
     "color": "^4.2.3",
     "expo": "~51.0.21",
+    "expo-file-system": "~17.0.1",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -26,12 +28,12 @@
     "react-native-paper-dates": "^0.22.19",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-file-system": "~17.0.1",
-    "expo-sharing": "~12.0.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/color": "^3.0.6",
     "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
