--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "expo-dev-client": "~4.0.20"
+    "expo-dev-client": "~4.0.20",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
