--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "expo-dev-client": "~4.0.20",
-    "react-native-gesture-handler": "~2.16.1"
+    "react-native-gesture-handler": "~2.16.1",
+    "expo-linking": "~6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
