chore: expo prebuild

--- a/ios/drivinglog/Info.plist
+++ b/ios/drivinglog/Info.plist
@@ -30,6 +30,12 @@
           <string>com.lexiroth.drivinglog</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>exp+driving-log</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
