--- a/app.json
+++ b/app.json
@@ -1,15 +1,18 @@
 {
   "expo": {
-    "name": "driving-log",
+    "name": "Driving Log",
+    "description": "A simple, FLOSS app to log driving hours.",
     "slug": "driving-log",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "automatic",
+    "githubUrl": "https://github.com/lexiroth/driving-log",
+    "owner": "lexiroth",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "ios": {
       "supportsTablet": true,
@@ -17,8 +20,9 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/adaptive-icon-fg.svg",
+        "backgroundImage": "./assets/adaptive-icon-bg.svg",
+        "monochromeImage": "./assets/adaptive-icon-mono.svg"
       },
       "package": "com.lexiroth.drivinglog"
     },
