--- a/package.json
+++ b/package.json
@@ -16,31 +16,31 @@
     "@react-navigation/native-stack": "^6.10.1",
     "@react-navigation/stack": "^6.4.1",
     "color": "^4.2.3",
-    "expo": "~51.0.21",
+    "expo": "~51.0.22",
+    "expo-dev-client": "~4.0.20",
     "expo-file-system": "~17.0.1",
+    "expo-linking": "~6.3.1",
     "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-localize": "^3.2.0",
     "react-native-paper": "^5.12.3",
     "react-native-paper-dates": "^0.22.19",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-dev-client": "~4.0.20",
-    "react-native-gesture-handler": "~2.16.1",
-    "expo-linking": "~6.3.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@types/color": "^3.0.6",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "@types/react-native-vector-icons": "^6.4.18",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
