--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-linking": "~6.3.1",
     "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
@@ -32,7 +33,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "expo-system-ui": "~3.0.7"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -41,6 +42,7 @@
     "@types/color": "^3.0.6",
     "@types/react": "~18.2.79",
     "@types/react-native-vector-icons": "^6.4.18",
+    "@types/uuid": "^10.0.0",
     "typescript": "~5.3.3"
   },
   "private": true
